# garminexport

./: .gitignore  .travis.yml  Makefile  Pipfile  README.md  garminbackup.py  garminexport.py  get_activity.py  incremental_backup.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  upload_activity.py
.github/workflows/: run-tests.yaml
garminexport/: backup.py  cli.py  garminbackup.py  garminclient.py  incremental_backup.py  logging_config.py  retryer.py  util.py
garminexport/cli/: backup.py  get_activity.py  upload_activity.py
samples/: count_activity_by_type.py  fix_untyped_activities.py  get_swim_activity.py  lab.py  load_activities.py  remove_duplicates.py  sample.py  store_activities.py
tests/: test_retryer.py
