[bdist_wheel]
universal = 1

[metadata]
name = garminexport
version = 0.4.2
description = Garmin Connect activity exporter and backup tool
long_description = file: README.md
long_description_content_type = text/markdown
author = Peter Gardfjäll
author_email = peter.gardfjall.work@gmail.com
keywords = garmin, export, backup
license = Apache-2.0
license_file = LICENSE
url = https://github.com/petergardfjall/garminexport
project_urls =
    Source = https://github.com/petergardfjall/garminexport.git
    Tracker = https://github.com/petergardfjall/garminexport/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
zip_safe = True
packages =
    garminexport
    garminexport.cli
python_requires = >=3.5
install_requires =
    requests>=2.0,<3
    python-dateutil~=2.4

[options.extras_require]
cloudflare = cloudscraper~=1.2
test = pytest~=7.3; pytest-cov~=4.0

[options.entry_points]
console_scripts =
    garmin-backup = garminexport.cli.backup:main
    garmin-get-activity = garminexport.cli.get_activity:main
    garmin-upload-activity = garminexport.cli.upload_activity:main
